deploy: b17ed60c77b15617e0737e482c49f4fd30946134

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:59.156076Z",
-     "iopub.status.busy": "2025-07-24T18:03:59.155850Z",
-     "iopub.status.idle": "2025-07-24T18:04:00.083176Z",
-     "shell.execute_reply": "2025-07-24T18:04:00.082681Z"
+     "iopub.execute_input": "2025-07-24T18:04:10.295798Z",
+     "iopub.status.busy": "2025-07-24T18:04:10.295480Z",
+     "iopub.status.idle": "2025-07-24T18:04:11.371232Z",
+     "shell.execute_reply": "2025-07-24T18:04:11.370532Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:00.084899Z",
-     "iopub.status.busy": "2025-07-24T18:04:00.084678Z",
-     "iopub.status.idle": "2025-07-24T18:04:00.387358Z",
-     "shell.execute_reply": "2025-07-24T18:04:00.386840Z"
+     "iopub.execute_input": "2025-07-24T18:04:11.373410Z",
+     "iopub.status.busy": "2025-07-24T18:04:11.373105Z",
+     "iopub.status.idle": "2025-07-24T18:04:11.776800Z",
+     "shell.execute_reply": "2025-07-24T18:04:11.776041Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:00.388973Z",
-     "iopub.status.busy": "2025-07-24T18:04:00.388812Z",
-     "iopub.status.idle": "2025-07-24T18:04:00.524821Z",
-     "shell.execute_reply": "2025-07-24T18:04:00.524208Z"
+     "iopub.execute_input": "2025-07-24T18:04:11.778922Z",
+     "iopub.status.busy": "2025-07-24T18:04:11.778721Z",
+     "iopub.status.idle": "2025-07-24T18:04:11.926511Z",
+     "shell.execute_reply": "2025-07-24T18:04:11.925866Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:00.526557Z",
-     "iopub.status.busy": "2025-07-24T18:04:00.526394Z",
-     "iopub.status.idle": "2025-07-24T18:04:00.913424Z",
-     "shell.execute_reply": "2025-07-24T18:04:00.912908Z"
+     "iopub.execute_input": "2025-07-24T18:04:11.928446Z",
+     "iopub.status.busy": "2025-07-24T18:04:11.928281Z",
+     "iopub.status.idle": "2025-07-24T18:04:12.335182Z",
+     "shell.execute_reply": "2025-07-24T18:04:12.334448Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:00.915058Z",
-     "iopub.status.busy": "2025-07-24T18:04:00.914897Z",
-     "iopub.status.idle": "2025-07-24T18:04:01.205344Z",
-     "shell.execute_reply": "2025-07-24T18:04:01.204784Z"
+     "iopub.execute_input": "2025-07-24T18:04:12.337512Z",
+     "iopub.status.busy": "2025-07-24T18:04:12.337314Z",
+     "iopub.status.idle": "2025-07-24T18:04:12.641479Z",
+     "shell.execute_reply": "2025-07-24T18:04:12.640735Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:01.206925Z",
-     "iopub.status.busy": "2025-07-24T18:04:01.206761Z",
-     "iopub.status.idle": "2025-07-24T18:04:01.208987Z",
-     "shell.execute_reply": "2025-07-24T18:04:01.208548Z"
+     "iopub.execute_input": "2025-07-24T18:04:12.643549Z",
+     "iopub.status.busy": "2025-07-24T18:04:12.643335Z",
+     "iopub.status.idle": "2025-07-24T18:04:12.646141Z",
+     "shell.execute_reply": "2025-07-24T18:04:12.645526Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:01.210436Z",
-     "iopub.status.busy": "2025-07-24T18:04:01.210257Z",
-     "iopub.status.idle": "2025-07-24T18:04:01.212852Z",
-     "shell.execute_reply": "2025-07-24T18:04:01.212420Z"
+     "iopub.execute_input": "2025-07-24T18:04:12.648012Z",
+     "iopub.status.busy": "2025-07-24T18:04:12.647816Z",
+     "iopub.status.idle": "2025-07-24T18:04:12.651306Z",
+     "shell.execute_reply": "2025-07-24T18:04:12.650679Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:01.214266Z",
-     "iopub.status.busy": "2025-07-24T18:04:01.214117Z",
-     "iopub.status.idle": "2025-07-24T18:04:02.412049Z",
-     "shell.execute_reply": "2025-07-24T18:04:02.411413Z"
+     "iopub.execute_input": "2025-07-24T18:04:12.653061Z",
+     "iopub.status.busy": "2025-07-24T18:04:12.652877Z",
+     "iopub.status.idle": "2025-07-24T18:04:14.010472Z",
+     "shell.execute_reply": "2025-07-24T18:04:14.009866Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpdrzNh8\", R: \"/tmp/RtmpJF39yJ\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/Rtmpmx0iPB\", R: \"/tmp/RtmpTlWSb0\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:02.413978Z",
-     "iopub.status.busy": "2025-07-24T18:04:02.413823Z",
-     "iopub.status.idle": "2025-07-24T18:04:02.813047Z",
-     "shell.execute_reply": "2025-07-24T18:04:02.812538Z"
+     "iopub.execute_input": "2025-07-24T18:04:14.012498Z",
+     "iopub.status.busy": "2025-07-24T18:04:14.012332Z",
+     "iopub.status.idle": "2025-07-24T18:04:14.486015Z",
+     "shell.execute_reply": "2025-07-24T18:04:14.485345Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:02.814658Z",
-     "iopub.status.busy": "2025-07-24T18:04:02.814504Z",
-     "iopub.status.idle": "2025-07-24T18:04:03.126142Z",
-     "shell.execute_reply": "2025-07-24T18:04:03.125588Z"
+     "iopub.execute_input": "2025-07-24T18:04:14.487975Z",
+     "iopub.status.busy": "2025-07-24T18:04:14.487804Z",
+     "iopub.status.idle": "2025-07-24T18:04:14.839931Z",
+     "shell.execute_reply": "2025-07-24T18:04:14.839187Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:03.127693Z",
-     "iopub.status.busy": "2025-07-24T18:04:03.127535Z",
-     "iopub.status.idle": "2025-07-24T18:04:03.134620Z",
-     "shell.execute_reply": "2025-07-24T18:04:03.134166Z"
+     "iopub.execute_input": "2025-07-24T18:04:14.841699Z",
+     "iopub.status.busy": "2025-07-24T18:04:14.841531Z",
+     "iopub.status.idle": "2025-07-24T18:04:14.849796Z",
+     "shell.execute_reply": "2025-07-24T18:04:14.849326Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:03.136177Z",
-     "iopub.status.busy": "2025-07-24T18:04:03.136027Z",
-     "iopub.status.idle": "2025-07-24T18:04:03.544731Z",
-     "shell.execute_reply": "2025-07-24T18:04:03.544235Z"
+     "iopub.execute_input": "2025-07-24T18:04:14.851361Z",
+     "iopub.status.busy": "2025-07-24T18:04:14.851195Z",
+     "iopub.status.idle": "2025-07-24T18:04:15.284035Z",
+     "shell.execute_reply": "2025-07-24T18:04:15.283325Z"
     }
    },
    "outputs": [
