deploy: fbc64742dc60677101ba9afbaf0e7d308a385de9

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:10.295798Z",
-     "iopub.status.busy": "2025-07-24T18:04:10.295480Z",
-     "iopub.status.idle": "2025-07-24T18:04:11.371232Z",
-     "shell.execute_reply": "2025-07-24T18:04:11.370532Z"
+     "iopub.execute_input": "2025-07-24T18:04:31.529202Z",
+     "iopub.status.busy": "2025-07-24T18:04:31.529041Z",
+     "iopub.status.idle": "2025-07-24T18:04:32.511303Z",
+     "shell.execute_reply": "2025-07-24T18:04:32.510778Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:11.373410Z",
-     "iopub.status.busy": "2025-07-24T18:04:11.373105Z",
-     "iopub.status.idle": "2025-07-24T18:04:11.776800Z",
-     "shell.execute_reply": "2025-07-24T18:04:11.776041Z"
+     "iopub.execute_input": "2025-07-24T18:04:32.513069Z",
+     "iopub.status.busy": "2025-07-24T18:04:32.512835Z",
+     "iopub.status.idle": "2025-07-24T18:04:32.844416Z",
+     "shell.execute_reply": "2025-07-24T18:04:32.843844Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:11.778922Z",
-     "iopub.status.busy": "2025-07-24T18:04:11.778721Z",
-     "iopub.status.idle": "2025-07-24T18:04:11.926511Z",
-     "shell.execute_reply": "2025-07-24T18:04:11.925866Z"
+     "iopub.execute_input": "2025-07-24T18:04:32.846181Z",
+     "iopub.status.busy": "2025-07-24T18:04:32.845999Z",
+     "iopub.status.idle": "2025-07-24T18:04:32.987777Z",
+     "shell.execute_reply": "2025-07-24T18:04:32.987151Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:11.928446Z",
-     "iopub.status.busy": "2025-07-24T18:04:11.928281Z",
-     "iopub.status.idle": "2025-07-24T18:04:12.335182Z",
-     "shell.execute_reply": "2025-07-24T18:04:12.334448Z"
+     "iopub.execute_input": "2025-07-24T18:04:32.989549Z",
+     "iopub.status.busy": "2025-07-24T18:04:32.989370Z",
+     "iopub.status.idle": "2025-07-24T18:04:33.383912Z",
+     "shell.execute_reply": "2025-07-24T18:04:33.383287Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:12.337512Z",
-     "iopub.status.busy": "2025-07-24T18:04:12.337314Z",
-     "iopub.status.idle": "2025-07-24T18:04:12.641479Z",
-     "shell.execute_reply": "2025-07-24T18:04:12.640735Z"
+     "iopub.execute_input": "2025-07-24T18:04:33.385652Z",
+     "iopub.status.busy": "2025-07-24T18:04:33.385481Z",
+     "iopub.status.idle": "2025-07-24T18:04:33.672169Z",
+     "shell.execute_reply": "2025-07-24T18:04:33.671644Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:12.643549Z",
-     "iopub.status.busy": "2025-07-24T18:04:12.643335Z",
-     "iopub.status.idle": "2025-07-24T18:04:12.646141Z",
-     "shell.execute_reply": "2025-07-24T18:04:12.645526Z"
+     "iopub.execute_input": "2025-07-24T18:04:33.673894Z",
+     "iopub.status.busy": "2025-07-24T18:04:33.673704Z",
+     "iopub.status.idle": "2025-07-24T18:04:33.676242Z",
+     "shell.execute_reply": "2025-07-24T18:04:33.675640Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:12.648012Z",
-     "iopub.status.busy": "2025-07-24T18:04:12.647816Z",
-     "iopub.status.idle": "2025-07-24T18:04:12.651306Z",
-     "shell.execute_reply": "2025-07-24T18:04:12.650679Z"
+     "iopub.execute_input": "2025-07-24T18:04:33.677675Z",
+     "iopub.status.busy": "2025-07-24T18:04:33.677514Z",
+     "iopub.status.idle": "2025-07-24T18:04:33.680332Z",
+     "shell.execute_reply": "2025-07-24T18:04:33.679882Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:12.653061Z",
-     "iopub.status.busy": "2025-07-24T18:04:12.652877Z",
-     "iopub.status.idle": "2025-07-24T18:04:14.010472Z",
-     "shell.execute_reply": "2025-07-24T18:04:14.009866Z"
+     "iopub.execute_input": "2025-07-24T18:04:33.681778Z",
+     "iopub.status.busy": "2025-07-24T18:04:33.681603Z",
+     "iopub.status.idle": "2025-07-24T18:04:34.867832Z",
+     "shell.execute_reply": "2025-07-24T18:04:34.867327Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/Rtmpmx0iPB\", R: \"/tmp/RtmpTlWSb0\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpifLU0D\", R: \"/tmp/Rtmp38uu5N\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:14.012498Z",
-     "iopub.status.busy": "2025-07-24T18:04:14.012332Z",
-     "iopub.status.idle": "2025-07-24T18:04:14.486015Z",
-     "shell.execute_reply": "2025-07-24T18:04:14.485345Z"
+     "iopub.execute_input": "2025-07-24T18:04:34.869637Z",
+     "iopub.status.busy": "2025-07-24T18:04:34.869468Z",
+     "iopub.status.idle": "2025-07-24T18:04:35.289539Z",
+     "shell.execute_reply": "2025-07-24T18:04:35.289004Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:14.487975Z",
-     "iopub.status.busy": "2025-07-24T18:04:14.487804Z",
-     "iopub.status.idle": "2025-07-24T18:04:14.839931Z",
-     "shell.execute_reply": "2025-07-24T18:04:14.839187Z"
+     "iopub.execute_input": "2025-07-24T18:04:35.291302Z",
+     "iopub.status.busy": "2025-07-24T18:04:35.291143Z",
+     "iopub.status.idle": "2025-07-24T18:04:35.620633Z",
+     "shell.execute_reply": "2025-07-24T18:04:35.620092Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:14.841699Z",
-     "iopub.status.busy": "2025-07-24T18:04:14.841531Z",
-     "iopub.status.idle": "2025-07-24T18:04:14.849796Z",
-     "shell.execute_reply": "2025-07-24T18:04:14.849326Z"
+     "iopub.execute_input": "2025-07-24T18:04:35.622317Z",
+     "iopub.status.busy": "2025-07-24T18:04:35.622141Z",
+     "iopub.status.idle": "2025-07-24T18:04:35.629505Z",
+     "shell.execute_reply": "2025-07-24T18:04:35.629066Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:14.851361Z",
-     "iopub.status.busy": "2025-07-24T18:04:14.851195Z",
-     "iopub.status.idle": "2025-07-24T18:04:15.284035Z",
-     "shell.execute_reply": "2025-07-24T18:04:15.283325Z"
+     "iopub.execute_input": "2025-07-24T18:04:35.631190Z",
+     "iopub.status.busy": "2025-07-24T18:04:35.631021Z",
+     "iopub.status.idle": "2025-07-24T18:04:36.049409Z",
+     "shell.execute_reply": "2025-07-24T18:04:36.048904Z"
     }
    },
    "outputs": [
