deploy: 2fe7dd547c1c1b908664f4d0e16213eb49859fac

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:31.529202Z",
-     "iopub.status.busy": "2025-07-24T18:04:31.529041Z",
-     "iopub.status.idle": "2025-07-24T18:04:32.511303Z",
-     "shell.execute_reply": "2025-07-24T18:04:32.510778Z"
+     "iopub.execute_input": "2025-07-24T18:07:02.911318Z",
+     "iopub.status.busy": "2025-07-24T18:07:02.911069Z",
+     "iopub.status.idle": "2025-07-24T18:07:03.884954Z",
+     "shell.execute_reply": "2025-07-24T18:07:03.884383Z"
     }
    },
    "outputs": [
@@ -41,7 +41,7 @@
      "output_type": "stream",
      "text": [
       "python: 3.11.13\n",
-      "spei: 0.7.0\n",
+      "spei: 0.8.0\n",
       "numpy: 2.2.6\n",
       "scipy: 1.16.0\n",
       "matplotlib: 3.10.3\n",
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:32.513069Z",
-     "iopub.status.busy": "2025-07-24T18:04:32.512835Z",
-     "iopub.status.idle": "2025-07-24T18:04:32.844416Z",
-     "shell.execute_reply": "2025-07-24T18:04:32.843844Z"
+     "iopub.execute_input": "2025-07-24T18:07:03.886753Z",
+     "iopub.status.busy": "2025-07-24T18:07:03.886503Z",
+     "iopub.status.idle": "2025-07-24T18:07:04.206248Z",
+     "shell.execute_reply": "2025-07-24T18:07:04.205675Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:32.846181Z",
-     "iopub.status.busy": "2025-07-24T18:04:32.845999Z",
-     "iopub.status.idle": "2025-07-24T18:04:32.987777Z",
-     "shell.execute_reply": "2025-07-24T18:04:32.987151Z"
+     "iopub.execute_input": "2025-07-24T18:07:04.207917Z",
+     "iopub.status.busy": "2025-07-24T18:07:04.207751Z",
+     "iopub.status.idle": "2025-07-24T18:07:04.350100Z",
+     "shell.execute_reply": "2025-07-24T18:07:04.349501Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:32.989549Z",
-     "iopub.status.busy": "2025-07-24T18:04:32.989370Z",
-     "iopub.status.idle": "2025-07-24T18:04:33.383912Z",
-     "shell.execute_reply": "2025-07-24T18:04:33.383287Z"
+     "iopub.execute_input": "2025-07-24T18:07:04.351769Z",
+     "iopub.status.busy": "2025-07-24T18:07:04.351604Z",
+     "iopub.status.idle": "2025-07-24T18:07:04.748341Z",
+     "shell.execute_reply": "2025-07-24T18:07:04.747850Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:33.385652Z",
-     "iopub.status.busy": "2025-07-24T18:04:33.385481Z",
-     "iopub.status.idle": "2025-07-24T18:04:33.672169Z",
-     "shell.execute_reply": "2025-07-24T18:04:33.671644Z"
+     "iopub.execute_input": "2025-07-24T18:07:04.750017Z",
+     "iopub.status.busy": "2025-07-24T18:07:04.749847Z",
+     "iopub.status.idle": "2025-07-24T18:07:05.040501Z",
+     "shell.execute_reply": "2025-07-24T18:07:05.039931Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:33.673894Z",
-     "iopub.status.busy": "2025-07-24T18:04:33.673704Z",
-     "iopub.status.idle": "2025-07-24T18:04:33.676242Z",
-     "shell.execute_reply": "2025-07-24T18:04:33.675640Z"
+     "iopub.execute_input": "2025-07-24T18:07:05.042109Z",
+     "iopub.status.busy": "2025-07-24T18:07:05.041948Z",
+     "iopub.status.idle": "2025-07-24T18:07:05.044449Z",
+     "shell.execute_reply": "2025-07-24T18:07:05.043867Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:33.677675Z",
-     "iopub.status.busy": "2025-07-24T18:04:33.677514Z",
-     "iopub.status.idle": "2025-07-24T18:04:33.680332Z",
-     "shell.execute_reply": "2025-07-24T18:04:33.679882Z"
+     "iopub.execute_input": "2025-07-24T18:07:05.045891Z",
+     "iopub.status.busy": "2025-07-24T18:07:05.045743Z",
+     "iopub.status.idle": "2025-07-24T18:07:05.048537Z",
+     "shell.execute_reply": "2025-07-24T18:07:05.048063Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:33.681778Z",
-     "iopub.status.busy": "2025-07-24T18:04:33.681603Z",
-     "iopub.status.idle": "2025-07-24T18:04:34.867832Z",
-     "shell.execute_reply": "2025-07-24T18:04:34.867327Z"
+     "iopub.execute_input": "2025-07-24T18:07:05.050010Z",
+     "iopub.status.busy": "2025-07-24T18:07:05.049839Z",
+     "iopub.status.idle": "2025-07-24T18:07:06.420139Z",
+     "shell.execute_reply": "2025-07-24T18:07:06.419622Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpifLU0D\", R: \"/tmp/Rtmp38uu5N\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpbAElzz\", R: \"/tmp/RtmpZGNk8o\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:34.869637Z",
-     "iopub.status.busy": "2025-07-24T18:04:34.869468Z",
-     "iopub.status.idle": "2025-07-24T18:04:35.289539Z",
-     "shell.execute_reply": "2025-07-24T18:04:35.289004Z"
+     "iopub.execute_input": "2025-07-24T18:07:06.421810Z",
+     "iopub.status.busy": "2025-07-24T18:07:06.421654Z",
+     "iopub.status.idle": "2025-07-24T18:07:06.830236Z",
+     "shell.execute_reply": "2025-07-24T18:07:06.829630Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:35.291302Z",
-     "iopub.status.busy": "2025-07-24T18:04:35.291143Z",
-     "iopub.status.idle": "2025-07-24T18:04:35.620633Z",
-     "shell.execute_reply": "2025-07-24T18:04:35.620092Z"
+     "iopub.execute_input": "2025-07-24T18:07:06.831865Z",
+     "iopub.status.busy": "2025-07-24T18:07:06.831693Z",
+     "iopub.status.idle": "2025-07-24T18:07:07.148072Z",
+     "shell.execute_reply": "2025-07-24T18:07:07.147437Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:35.622317Z",
-     "iopub.status.busy": "2025-07-24T18:04:35.622141Z",
-     "iopub.status.idle": "2025-07-24T18:04:35.629505Z",
-     "shell.execute_reply": "2025-07-24T18:04:35.629066Z"
+     "iopub.execute_input": "2025-07-24T18:07:07.149777Z",
+     "iopub.status.busy": "2025-07-24T18:07:07.149618Z",
+     "iopub.status.idle": "2025-07-24T18:07:07.156631Z",
+     "shell.execute_reply": "2025-07-24T18:07:07.156154Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:35.631190Z",
-     "iopub.status.busy": "2025-07-24T18:04:35.631021Z",
-     "iopub.status.idle": "2025-07-24T18:04:36.049409Z",
-     "shell.execute_reply": "2025-07-24T18:04:36.048904Z"
+     "iopub.execute_input": "2025-07-24T18:07:07.158097Z",
+     "iopub.status.busy": "2025-07-24T18:07:07.157930Z",
+     "iopub.status.idle": "2025-07-24T18:07:07.574972Z",
+     "shell.execute_reply": "2025-07-24T18:07:07.574325Z"
     }
    },
    "outputs": [
