--- a/examples/example07_knmi.ipynb
+++ b/examples/example07_knmi.ipynb
@@ -5,7 +5,7 @@
    "id": "87fd561f",
    "metadata": {},
    "source": [
-    "# KNMI Drougt Indices\n",
+    "# KNMI Drought Indices\n",
     "\n",
     "J.P.M. Witte, G.A.P.H. van den Eertwegh and P.J.J.F. Torfs (2025) - [Absolute Meteorological Drought Indices Validated Against Irrigation Amounts](https://doi.org/10.3390/w17071056)."
    ]
@@ -24,10 +24,10 @@
    "id": "1a439ca7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:51.907404Z",
-     "iopub.status.busy": "2025-07-24T18:04:51.907235Z",
-     "iopub.status.idle": "2025-07-24T18:04:52.865090Z",
-     "shell.execute_reply": "2025-07-24T18:04:52.864472Z"
+     "iopub.execute_input": "2025-07-24T18:07:23.455120Z",
+     "iopub.status.busy": "2025-07-24T18:07:23.454950Z",
+     "iopub.status.idle": "2025-07-24T18:07:24.402960Z",
+     "shell.execute_reply": "2025-07-24T18:07:24.402279Z"
     }
    },
    "outputs": [],
@@ -63,10 +63,10 @@
    "id": "131815ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:52.867262Z",
-     "iopub.status.busy": "2025-07-24T18:04:52.866996Z",
-     "iopub.status.idle": "2025-07-24T18:04:52.869847Z",
-     "shell.execute_reply": "2025-07-24T18:04:52.869357Z"
+     "iopub.execute_input": "2025-07-24T18:07:24.405177Z",
+     "iopub.status.busy": "2025-07-24T18:07:24.404916Z",
+     "iopub.status.idle": "2025-07-24T18:07:24.407896Z",
+     "shell.execute_reply": "2025-07-24T18:07:24.407312Z"
     }
    },
    "outputs": [],
@@ -119,10 +119,10 @@
    "id": "7401ab30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:52.871429Z",
-     "iopub.status.busy": "2025-07-24T18:04:52.871262Z",
-     "iopub.status.idle": "2025-07-24T18:04:52.874195Z",
-     "shell.execute_reply": "2025-07-24T18:04:52.873727Z"
+     "iopub.execute_input": "2025-07-24T18:07:24.409510Z",
+     "iopub.status.busy": "2025-07-24T18:07:24.409332Z",
+     "iopub.status.idle": "2025-07-24T18:07:24.412203Z",
+     "shell.execute_reply": "2025-07-24T18:07:24.411760Z"
     }
    },
    "outputs": [],
@@ -198,10 +198,10 @@
    "id": "528daaa6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:52.875744Z",
-     "iopub.status.busy": "2025-07-24T18:04:52.875587Z",
-     "iopub.status.idle": "2025-07-24T18:04:52.898116Z",
-     "shell.execute_reply": "2025-07-24T18:04:52.897584Z"
+     "iopub.execute_input": "2025-07-24T18:07:24.413670Z",
+     "iopub.status.busy": "2025-07-24T18:07:24.413519Z",
+     "iopub.status.idle": "2025-07-24T18:07:24.435347Z",
+     "shell.execute_reply": "2025-07-24T18:07:24.434862Z"
     }
    },
    "outputs": [],
@@ -226,10 +226,10 @@
    "id": "433a3701",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:52.900015Z",
-     "iopub.status.busy": "2025-07-24T18:04:52.899843Z",
-     "iopub.status.idle": "2025-07-24T18:04:53.759815Z",
-     "shell.execute_reply": "2025-07-24T18:04:53.759203Z"
+     "iopub.execute_input": "2025-07-24T18:07:24.437153Z",
+     "iopub.status.busy": "2025-07-24T18:07:24.436985Z",
+     "iopub.status.idle": "2025-07-24T18:07:25.307167Z",
+     "shell.execute_reply": "2025-07-24T18:07:25.306545Z"
     }
    },
    "outputs": [
@@ -299,10 +299,10 @@
    "id": "a0a18964",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:53.762457Z",
-     "iopub.status.busy": "2025-07-24T18:04:53.762254Z",
-     "iopub.status.idle": "2025-07-24T18:04:53.925379Z",
-     "shell.execute_reply": "2025-07-24T18:04:53.924794Z"
+     "iopub.execute_input": "2025-07-24T18:07:25.309248Z",
+     "iopub.status.busy": "2025-07-24T18:07:25.309049Z",
+     "iopub.status.idle": "2025-07-24T18:07:25.476589Z",
+     "shell.execute_reply": "2025-07-24T18:07:25.475874Z"
     }
    },
    "outputs": [
@@ -416,10 +416,10 @@
    "id": "ca3b85aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:53.927156Z",
-     "iopub.status.busy": "2025-07-24T18:04:53.926983Z",
-     "iopub.status.idle": "2025-07-24T18:04:54.088202Z",
-     "shell.execute_reply": "2025-07-24T18:04:54.087556Z"
+     "iopub.execute_input": "2025-07-24T18:07:25.478438Z",
+     "iopub.status.busy": "2025-07-24T18:07:25.478247Z",
+     "iopub.status.idle": "2025-07-24T18:07:25.638731Z",
+     "shell.execute_reply": "2025-07-24T18:07:25.638095Z"
     }
    },
    "outputs": [
@@ -533,10 +533,10 @@
    "id": "88fa3017",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:54.089986Z",
-     "iopub.status.busy": "2025-07-24T18:04:54.089679Z",
-     "iopub.status.idle": "2025-07-24T18:04:54.251366Z",
-     "shell.execute_reply": "2025-07-24T18:04:54.250723Z"
+     "iopub.execute_input": "2025-07-24T18:07:25.640455Z",
+     "iopub.status.busy": "2025-07-24T18:07:25.640254Z",
+     "iopub.status.idle": "2025-07-24T18:07:25.800037Z",
+     "shell.execute_reply": "2025-07-24T18:07:25.799490Z"
     }
    },
    "outputs": [
@@ -643,10 +643,10 @@
    "id": "7fa91d05",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:54.253119Z",
-     "iopub.status.busy": "2025-07-24T18:04:54.252923Z",
-     "iopub.status.idle": "2025-07-24T18:04:54.538298Z",
-     "shell.execute_reply": "2025-07-24T18:04:54.537629Z"
+     "iopub.execute_input": "2025-07-24T18:07:25.801783Z",
+     "iopub.status.busy": "2025-07-24T18:07:25.801594Z",
+     "iopub.status.idle": "2025-07-24T18:07:26.088175Z",
+     "shell.execute_reply": "2025-07-24T18:07:26.087649Z"
     }
    },
    "outputs": [
@@ -753,10 +753,10 @@
    "id": "66972df3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:54.540076Z",
-     "iopub.status.busy": "2025-07-24T18:04:54.539892Z",
-     "iopub.status.idle": "2025-07-24T18:04:54.696576Z",
-     "shell.execute_reply": "2025-07-24T18:04:54.696077Z"
+     "iopub.execute_input": "2025-07-24T18:07:26.089800Z",
+     "iopub.status.busy": "2025-07-24T18:07:26.089627Z",
+     "iopub.status.idle": "2025-07-24T18:07:26.248261Z",
+     "shell.execute_reply": "2025-07-24T18:07:26.247662Z"
     }
    },
    "outputs": [
@@ -873,10 +873,10 @@
    "id": "38d6f9af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:54.698331Z",
-     "iopub.status.busy": "2025-07-24T18:04:54.698150Z",
-     "iopub.status.idle": "2025-07-24T18:04:55.941551Z",
-     "shell.execute_reply": "2025-07-24T18:04:55.940926Z"
+     "iopub.execute_input": "2025-07-24T18:07:26.250042Z",
+     "iopub.status.busy": "2025-07-24T18:07:26.249883Z",
+     "iopub.status.idle": "2025-07-24T18:07:27.460978Z",
+     "shell.execute_reply": "2025-07-24T18:07:27.460404Z"
     }
    },
    "outputs": [
@@ -960,10 +960,10 @@
    "id": "b06fa427",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:55.944208Z",
-     "iopub.status.busy": "2025-07-24T18:04:55.943999Z",
-     "iopub.status.idle": "2025-07-24T18:04:56.152005Z",
-     "shell.execute_reply": "2025-07-24T18:04:56.151474Z"
+     "iopub.execute_input": "2025-07-24T18:07:27.463497Z",
+     "iopub.status.busy": "2025-07-24T18:07:27.463293Z",
+     "iopub.status.idle": "2025-07-24T18:07:27.667050Z",
+     "shell.execute_reply": "2025-07-24T18:07:27.666538Z"
     }
    },
    "outputs": [
@@ -1007,10 +1007,10 @@
    "id": "eb4ea498",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:04:56.153580Z",
-     "iopub.status.busy": "2025-07-24T18:04:56.153421Z",
-     "iopub.status.idle": "2025-07-24T18:04:56.377736Z",
-     "shell.execute_reply": "2025-07-24T18:04:56.377218Z"
+     "iopub.execute_input": "2025-07-24T18:07:27.668627Z",
+     "iopub.status.busy": "2025-07-24T18:07:27.668470Z",
+     "iopub.status.idle": "2025-07-24T18:07:27.887857Z",
+     "shell.execute_reply": "2025-07-24T18:07:27.887267Z"
     }
    },
    "outputs": [
